fix: removed navbar and log item z-index

--- a/src/components/elements/Navbar.module.scss
+++ b/src/components/elements/Navbar.module.scss
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    z-index: 2;
     grid-row: 1 / -2;
     border-right: var(--border);
     padding: 8px 0px;
